Implement currentQuestID